kubernetes/bentopdf/bentopdf-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  selector:
    app: bentopdf
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
